<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.fxml.SignUpActivity">

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:paddingTop="50dp"
        android:textAlignment="center"

        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textSize="35dp"
        android:textColor="#0035F6"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:layout_below="@id/signUpText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:padding="20dp"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_below="@id/username"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:padding="20dp"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_below="@id/email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:padding="20dp"
        />

    <EditText
        android:id="@+id/passwordAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:inputType="textPassword"
        android:hint="@string/passwordAgain"
        android:layout_below="@id/password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:padding="20dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/passwordAgain"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:onClick="signUp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginStart="30dp"
            android:onClick="cancel"
            />

    </LinearLayout>

</RelativeLayout>